@@ -60,5 +60,11 @@
    legs. */
 // #define QL_USE_INDEXED_COUPON
 
+/* Define this to have singletons return different instances for
+   different sessions. You will have to provide and link with the
+   library a sessionId() function in namespace QuantLib, returning a
+   different session id for each session.*/
+// #define QL_ENABLE_SESSIONS
+
 
 #endif
